--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: A Thousand Degrees Below Zero
 url: http://www.gutenberg.org/ebooks/50585
